# lioqing.github.io

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  manifest.json  package-lock.json  package.json
.github/workflows/: gh-pages-deploy.yml
.zed/: settings.json
assets/: experiences.json  manifest.json  projects.json  register_sw.js  sw.js
models/: background.blend  background.blend1  gen_contrib_blocks.py  skills.af  zero_one.blend
src/: app.rs  background.rs  consts.rs  controller.rs  delta_time.rs  event_listeners.rs  ext.rs  frame.rs  gpu.rs  images.rs  lib.rs  line_segment.rs  logger.rs  main.rs  meta_field.rs  meta_image.rs  meta_shape.rs  mouse.rs  pipeline.rs  query_signal.rs  state.rs  texture_blitter.rs  theme.rs
src/grid/: mod.rs  pipeline.rs  target.rs
src/mar_sq/: line_segment.rs  mod.rs  pipeline.rs  quad.rs  traits.rs
src/page/: experiences.rs  home.rs  mod.rs  not_found.rs  projects.rs  skills.rs
src/shader/: gaussian_blur.wgsl  grid.wgsl  grid_process.wgsl  line_segment.wgsl  line_segment_marching_squares.wgsl  liquid_quad.wgsl  marching_squares.wgsl  meta_field.wgsl  meta_field_grad.wgsl  meta_field_image_process.wgsl  meta_field_process.wgsl  noise_texture.wgsl  post_processor.wgsl  quad.wgsl  quad_marching_squares.wgsl  texture_blitter.wgsl  wave.wgsl
