[package]
name = "lioqing"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { version = "0.8", default-features = false, features = [
    "std",
    "no-rng",
] }
atomic_enum = "0.3"
bytemuck = "1.24"
console_error_panic_hook = "0.1"
glam = { version = "0.30", features = ["bytemuck"] }
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
strum = { version = "0.27", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "MouseEvent",
    "GpuCanvasContext",
    "StyleSheetList",
    "CssStyleDeclaration",
    "HtmlSpanElement",
    "HtmlCollection",
    "DomRect",
    "Element",
    "console",
] }
web-time = "1.1"
wgpu = "27.0"

[lints.rustdoc]
all = "warn"

[lints.clippy]
all = "warn"
